--- a/backend/templates/admin/add_button_change_list.html
+++ b/backend/templates/admin/add_button_change_list.html
@@ -120,7 +120,7 @@
                         <div class="form-group">
                             <div class="d-flex justify-content-around" style="gap: 30px">
                                 <button type="submit" class="btn btn-info btn-block">{% trans 'Update' %}</button>
-                                {% comment %} <a id="btn-delete-attribute" href="" class="btn btn-danger btn-block mt-0">{% trans 'Delete' %}</a> {% endcomment %}
+                                <a id="btn-delete-attribute" href="" class="btn btn-danger btn-block mt-0">{% trans 'Delete' %}</a>
                             </div>
                         </div>
                     </form>
