--- a/backend/templates/admin/change_list_object_tools.html
+++ b/backend/templates/admin/change_list_object_tools.html
@@ -4,7 +4,7 @@
 {% block object-tools-items %}
     {% if has_add_permission %}
         {% url cl.opts|admin_urlname:'add' as add_url %}
-        <a href="{% add_preserved_filters add_url is_popup to_field %}" class="btn {{ jazzmin_ui.button_classes.success }} float-right" style="max-width:300px">
+        <a href="{% add_preserved_filters add_url is_popup to_field %}" class="btn {{ jazzmin_ui.button_classes.success }}" style="max-width:200px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis">
             <i class="fa fa-plus-circle"></i> &nbsp; {% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
         </a>
     {% endif %}
