--- a/backend/templates/admin/button_statistic_TBKT.html
+++ b/backend/templates/admin/button_statistic_TBKT.html
@@ -32,10 +32,10 @@
         Thống kê
     </button>
     <div class="dropdown-menu">
-        <button type="button" id="thongke-loai" class="dropdown-item thongke" data-toggle="modal" data-target="#TKModal" data-title="loại" data-type="loai">Theo loại</button>
-        <button type="button" id="thongke-xuatxu" class="dropdown-item thongke" data-toggle="modal" data-target="#TKModal" data-title="xuất xứ" data-type="xuatxu">Theo xuất xứ</button>
-        <button type="button" id="thongke-pccl" class="dropdown-item thongke" data-toggle="modal" data-target="#TKModal" data-title="phân cấp chất lượng" data-type="pccl">Theo phân cấp chất lượng</button>
-        <button type="button" id="thongke-donvi" class="dropdown-item thongke" data-toggle="modal" data-target="#TKModal" data-title="đơn vị trực thuộc quản lý" data-type="donvi">Theo đơn vị</button>
+        <button type="button" id="thongke-loai" class="dropdown-item thongke" data-toggle="modal" data-target="#TKModal" data-title="loại" data-type="loai" data-appmodel="{{cl.opts}}">Theo loại</button>
+        <button type="button" id="thongke-xuatxu" class="dropdown-item thongke" data-toggle="modal" data-target="#TKModal" data-title="xuất xứ" data-type="xuatxu" data-appmodel="{{cl.opts}}">Theo xuất xứ</button>
+        <button type="button" id="thongke-pccl" class="dropdown-item thongke" data-toggle="modal" data-target="#TKModal" data-title="phân cấp chất lượng" data-type="pccl" data-appmodel="{{cl.opts}}">Theo phân cấp chất lượng</button>
+        <button type="button" id="thongke-donvi" class="dropdown-item thongke" data-toggle="modal" data-target="#TKModal" data-title="đơn vị trực thuộc quản lý" data-type="donvi" data-appmodel="{{cl.opts}}">Theo đơn vị</button>
     </div>
 </div>
     
