--- a/backend/templates/admin/base.html
+++ b/backend/templates/admin/base.html
@@ -200,7 +200,12 @@
 
                     <nav class="mt-2">
                         <ul class="nav nav-pills nav-sidebar flex-column {{ jazzmin_ui.sidebar_list_classes }}" data-widget="treeview" role="menu" data-collapsible="false">
-
+                            <li class="nav-item">
+                                <a href="https://www.google.com/" class="nav-link">
+                                    <i class="nav-icon fa fa-home"></i>
+                                    <p>{% trans 'Trang người dùng' %}</p>
+                                </a>
+                            </li>
                             <li class="nav-item">
                                 <a href="{% url 'admin:index' %}" class="nav-link">
                                     <i class="nav-icon fas fa-tachometer-alt"></i>
