--- a/backend/templates/admin/base.html
+++ b/backend/templates/admin/base.html
@@ -201,7 +201,7 @@
                     <nav class="mt-2">
                         <ul class="nav nav-pills nav-sidebar flex-column {{ jazzmin_ui.sidebar_list_classes }}" data-widget="treeview" role="menu" data-collapsible="false">
                             <li class="nav-item">
-                                <a href="https://www.google.com/" class="nav-link">
+                                <a href="http://localhost:3003/chon-che-do-hien-thi" class="nav-link" target="_blank">
                                     <i class="nav-icon fa fa-home"></i>
                                     <p>{% trans 'Trang người dùng' %}</p>
                                 </a>
